--- a/pagina1.html
+++ b/pagina1.html
@@ -1,11 +1,29 @@
+<!doctype html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
-</head>
-<body>
-    
-</body>
+  <head>
+    <!-- Required meta tags -->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <link rel="stylesheet" href="app.css">
+
+    <title>Trabajo HTML CSS</title>
+  </head>
+  <body>
+    <div class="container-fluid">
+      <div class="text-wrapper gray-bg">
+        <div class="text">
+          <p>
+            ¿Qué haces por el medio ambiente?
+          </p>
+          <p>
+            A) Soy vegetariano/vegano
+            <br>
+            B) Como vestuario de 2da mano
+            <br>
+            C) No compro ni consumo palta
+          </p>
+        </div>
+      </div>
+    </div>
+  </body>
 </html>
