--- a/pagina3.html
+++ b/pagina3.html
@@ -1,11 +1,45 @@
+<!doctype html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
-</head>
-<body>
-    
-</body>
+  <head>
+    <!-- Required meta tags -->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
+     <link href="C:\Users\ncaro\Documents\GitHub\trabajo-final-n-duimovic-j-reyes-r-duran-n-soto web.css">
+    <title>Trabajo HTML CSS</title>
+
+  </head>
+  <body>
+    <style type="text/css">
+
+    </style>
+    <div class="container-fluid">
+        <div class="menu gray-bg">
+          menu
+        </div>
+    </div>
+    <div class="container-fluid">
+        <div class="col gray-bg">
+          <div class="noticias">
+            Noticias
+          </div>
+        </div>
+        <div class="col gray-bg">
+          <div class="noticias">
+            Noticias
+          </div>
+        </div>
+        <div class="col gray-bg">
+          <div class="noticias">
+            Noticias
+          </div>
+        </div>
+    </div>
+    <div class="container-fluid">
+        <div class="footer gray-bg">
+          contacto / numero / mail
+        </div>
+    </div>
+
+  </body>
 </html>
