--- a/1.html
+++ b/1.html
@@ -4,8 +4,8 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-
     <link rel="stylesheet" href="app.css">
+
     <title>Trabajo HTML CSS</title>
   </head>
   <body>
@@ -13,16 +13,14 @@
       <div class="text-wrapper gray-bg">
         <div class="text">
           <p>
-            ¿Que haces realmente por el medio ambiente?
+            ¿ Icion hocus hui sent. Sedi, no. Ostrum, nercer-fin nisquos scioriaelii pro pos re?
           </p>
           <p>
-            a) Consumo de agua
-          </p>
-          <p>
-            b) Animales salvados
-          </p>
-          <p>
-            c) bla bla bla
+            A) Oximmo Catiu coticit,
+            <br>
+            B) Catim consus hortus introbus. 
+            <br>
+            C) Senatum ut viristritam pro Catisse
           </p>
         </div>
       </div>
