--- a/2.html
+++ b/2.html
@@ -4,8 +4,8 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <link rel="stylesheet" href="app.css">
 
+    <link rel="stylesheet" href="app.css">
     <title>Trabajo HTML CSS</title>
   </head>
   <body>
@@ -13,14 +13,15 @@
       <div class="text-wrapper gray-bg">
         <div class="text">
           <p>
-            ¿Qué haces por el medio ambiente?
+            ¿Que significa tu respuesta?
           </p>
           <p>
-            A) Soy vegetariano/vegano
+            a) Respuesta seleccionada
+          </p>
+          <p>
+            - Dendaecearcim expere perum comnis net, qui ad magnimus dolupta ersped exerita tqua-tur rempore quidem. 
             <br>
-            B) Como vestuario de 2da mano
-            <br>
-            C) No compro ni consumo palta
+            - Beresti orest, eum volorepudam as as aut parunto ipis minvelecae. Rae vent fugiass imaximagnia del ello dolupita occusae dem.
           </p>
         </div>
       </div>
