--- a/3.html
+++ b/3.html
@@ -5,9 +5,8 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-     <link href="C:\Users\ncaro\Documents\GitHub\trabajo-final-n-duimovic-j-reyes-r-duran-n-soto web.css">
+     <link rel="stylesheet" href="app.css">
     <title>Trabajo HTML CSS</title>
-
   </head>
   <body>
     <style type="text/css">
