--- a/1.html
+++ b/1.html
@@ -13,12 +13,14 @@
       <div class="text-wrapper gray-bg">
         <div class="text">
           <p>
-            ¿ Icion hocus hui sent. Sedi, no. Ostrum, nercer-fin nisquos scioriaelii pro pos re?
+            <h2 style="color: blanchedalmond;">
+            ¿Qué haces para ayudar al medio ambiente?
+          </h2>
           </p>
           <p>
-            A) Oximmo Catiu coticit,
+            A) Vegetariano o vegano.
             <br>
-            B) Catim consus hortus introbus. 
+            B) Compra y venta de ropa de segunda mano. 
             <br>
             C) Senatum ut viristritam pro Catisse
           </p>
