--- a/3.html
+++ b/3.html
@@ -14,13 +14,15 @@
     </style>
     <div class="container-fluid">
         <div class="menu gray-bg">
-          menu
+          <h1 style="color: blanchedalmond;font-size: medium;"><strong>MENÚ</strong></h1>
         </div>
     </div>
     <div class="container-fluid">
         <div class="col gray-bg">
           <div class="noticias">
-            Noticias
+            <h3>Chile se está secando: descenso de aguas superficiales causa preocupación a nivel nacional</h3>
+            <img class="fotonoticia1" src="fotonoticia1.jpg"/>
+            <p>La disponibilidad de agua ha disminuido en un 37% en algunas zonas de nuestro país los últimos años. La laguna de Aculeo, el lago Caburgua, el río Huasco, el río Copiapó y el lago Colbún son solo algunos de los más afectados por la falta hídrica. Esto ha generado drásticos cambios en sus caudales o en algunos casos cayendo, llegando incluso a la desaparición. Hasta hace 15 años se decía que el agua superficial bastaba para cubrir las necesidades de nuestra población, hoy los expertos se encuentran preocupados con la situación.</p>
           </div>
         </div>
         <div class="col gray-bg">
