--- a/1.html
+++ b/1.html
@@ -12,18 +12,17 @@
     <div class="container-fluid">
       <div class="text-wrapper gray-bg">
         <div class="text">
-          <p>
+          <ul>
             <h2 style="color: blanchedalmond;">
-            ¿Qué haces para ayudar al medio ambiente?
+            ¿Qué hacer para ayudar al medio ambiente?
           </h2>
-          </p>
-          <p>
-            A) Vegetariano o vegano.
-            <br>
-            B) Compra y venta de ropa de segunda mano. 
-            <br>
-            C) Senatum ut viristritam pro Catisse
-          </p>
+          <ul>
+            <li>Lavarse los dientes sin dejar el agua corriendo</li>
+            <li>Vegetariano o vegano.</li>
+            <li>Compra y venta de ropa de segunda mano.</li>
+            <li>Consumo moderado de la palta.</li>
+            <li>Duchas cortas</li>
+          </ul>
         </div>
       </div>
     </div>
