--- a/2.html
+++ b/2.html
@@ -12,17 +12,15 @@
     <div class="container-fluid">
       <div class="text-wrapper gray-bg">
         <div class="text">
-          <p>
-            ¿Que significa tu respuesta?
+          <p style="color: blanchedalmond;">
+            ¿Que significan estas opciones en litros de agua?
           </p>
-          <p>
-            a) Respuesta seleccionada
-          </p>
-          <p>
-            - Dendaecearcim expere perum comnis net, qui ad magnimus dolupta ersped exerita tqua-tur rempore quidem. 
-            <br>
-            - Beresti orest, eum volorepudam as as aut parunto ipis minvelecae. Rae vent fugiass imaximagnia del ello dolupita occusae dem.
-          </p>
+          <ul>
+            <li>En cepillarse los dientes con el agua corriendo se pueden gastar hasta 20L de agua.</li>
+            <li>Medio kg de pollo requiere 1,960L de agua, la carne de res requiere casi 7,000 litros, 1L de lehe requiere 1.000 L de agua.</li>
+            <li>Un pantalón de algodón requiere 3.117L de agua, una camiseta de algodón requiere 1.200L, un par de zapatillas requiere hasta 4.400L.</li>
+            <li>Un kilo de paltas requiere 389L de agua.</li>
+            <li>Ducharse gasta entre 80 y 120L de agua.</li>
         </div>
       </div>
     </div>
