--- a/3.html
+++ b/3.html
@@ -14,31 +14,37 @@
     </style>
     <div class="container-fluid">
         <div class="menu gray-bg">
-          <h1 style="color: blanchedalmond;font-size: medium;"><strong>MENÚ</strong></h1>
+          <h1 style="color: blanchedalmond;font-size: medium;"><strong>SOBRE EL AGUA | NOTICIAS | ACTIVIDADES | CONTACTANOS</strong></h1>
         </div>
     </div>
     <div class="container-fluid">
         <div class="col gray-bg">
           <div class="noticias">
-            <h3>Chile se está secando: descenso de aguas superficiales causa preocupación a nivel nacional</h3>
+            <h2>Chile se está secando: descenso de aguas superficiales causa preocupación a nivel nacional</h2>
             <img class="fotonoticia1" src="fotonoticia1.jpg"/>
             <p>La disponibilidad de agua ha disminuido en un 37% en algunas zonas de nuestro país los últimos años. La laguna de Aculeo, el lago Caburgua, el río Huasco, el río Copiapó y el lago Colbún son solo algunos de los más afectados por la falta hídrica. Esto ha generado drásticos cambios en sus caudales o en algunos casos cayendo, llegando incluso a la desaparición. Hasta hace 15 años se decía que el agua superficial bastaba para cubrir las necesidades de nuestra población, hoy los expertos se encuentran preocupados con la situación.</p>
           </div>
         </div>
         <div class="col gray-bg">
           <div class="noticias">
-            Noticias
+            <h2>Chile se enfrenta a un escenario donde la escasez del recurso hídrico es parte del día a día</h2>
+            <img class="fotonoticia2" src="fotonoticia2.jpg"/>
+            <p><strong>Como chile se enfrenta a la crisis del agua.</strong></p>
+            <p>Hace algunos años se hablaba de que el agua era un recurso natural, renovable e ilimitado. Pero hoy esa idea ha cambiado debido, principalmente, al desarrollo económico de los países y el crecimiento de población. La visión actual es de un renovable pero limitado, del que sólo un porcentaje mínimo puede ser consumido por el ser humano.</p>
           </div>
         </div>
         <div class="col gray-bg">
           <div class="noticias">
-            Noticias
+            <h2>Auge de exportaciones de paltas agrava crisis de escasez de agua en Petorca</h2>
+            <img class="fotonoticia3" src="fotonoticia3.jpg"/>
+            <p>Con las fuentes locales de agua secándose como resultado de la intensificación de las sequías y el regado de la palta, muchos vecinos sobreviven con el agua que entregan camiones cisterna.</p>
+            <p>Sus abundantes recursos ayudan a hacer de Chile el tercer mayor exportador mundial de paltas, el ingrediente principal del famoso guacamole mexicano. Pero el precio de este auge, dicen los residentes, se ve reflejado en una severa escasez hídrica.</p>
           </div>
         </div>
     </div>
     <div class="container-fluid">
         <div class="footer gray-bg">
-          contacto / numero / mail
+        <p> <strong> Mail: </strong> movimientoporelagua@gmail.com | <strong>Numero:</strong> +56991978801 </p>
         </div>
     </div>
 
